nginx_container_angular/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # Rewrite path
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /ui(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: my-acr-service2
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-acr-service
            port:
              number: 80
